Update 'go-tkjsizps' component image to: quay.io/rhtap_qe/go-tkjsizps:988b686c002083bb6d4fe031396730d1376aa895@sha256:a605d7bf0129fa79e5c58fc3cc80d6002b2a871ae91fbb1e2832c40cf28b5f10

--- a/components/go-tkjsizps/overlays/development/deployment-patch.yaml
+++ b/components/go-tkjsizps/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-tkjsizps
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-tkjsizps:988b686c002083bb6d4fe031396730d1376aa895@sha256:a605d7bf0129fa79e5c58fc3cc80d6002b2a871ae91fbb1e2832c40cf28b5f10
+          name: container-image
